Upload resources in resumable chunks
